# rustpyfibonacci

./: .coveragerc  .gitignore  CONTRIBUTING.rst  Cargo.toml  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/rustpy/: fibo.py  skeleton.py
src/rustpy/rustcode/src/: lib.rs  main.rs
tests/: conftest.py  test_skeleton.py
